<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Registarasaseller">

    <LinearLayout
        android:id="@+id/registarasasellerl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="45sp"
            android:textStyle="bold"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/registartext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/register_as_customer"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"

        app:layout_constraintTop_toBottomOf="@+id/registarasasellerl1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <EditText
            android:id="@+id/registarasasellerfname"
            android:layout_width="250sp"
            android:layout_marginTop="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:background="@drawable/gradient"
            android:hint="@string/first_name"/>

        <EditText
            android:id="@+id/registarasasellerlname"
            android:layout_width="250sp"
            android:layout_marginTop="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:background="@drawable/gradient"
            android:hint="@string/last_name"/>

        <EditText
            android:id="@+id/registarasasellerno"
            android:layout_width="250sp"
            android:inputType="number"
            android:layout_marginTop="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:background="@drawable/gradient"
            android:hint="@string/mobile_number"/>

        <EditText
            android:id="@+id/registarasaselleremail"
            android:layout_width="250sp"
            android:layout_marginTop="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textWebEmailAddress"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:background="@drawable/gradient"
            android:hint="@string/email"/>


        <EditText
            android:id="@+id/registarasasellerpassword"
            android:layout_width="250sp"
            android:layout_marginTop="20sp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:padding="10sp"
            android:background="@drawable/gradient"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"/>

        <EditText
            android:id="@+id/registarasasellerconpassword"
            android:layout_width="250sp"
            android:layout_marginTop="20sp"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:background="@drawable/gradient"
            android:hint="@string/confirm_password"/>


    </LinearLayout>


    <Button
        android:id="@+id/registarasseller"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:background="@drawable/rounded"
        android:layout_marginBottom="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>